@@ -47,8 +47,12 @@ case "$1" in
 		evaluate_retval
 
 		echo "Creating new /var/run/utmp..."
-		> /var/run/utmp && chmod 644 /var/run/utmp
+		> /var/run/utmp
 		evaluate_retval
+		if grep -q '^utmp:' /etc/group ; then
+			chmod 0664 /var/run/utmp
+			chgrp utmp /var/run/utmp
+		fi
 
 		echo "Removing possible /etc/nologin /fastboot and /forcefsck..."
 		rm -f /etc/nologin /fastboot /forcefsck
